[add]: code verification
