# internal/server/auth/auth.go
@@ -9,6 +9,33 @@ import (
 	"yukiko-shop/pkg/response"
 )
 
+func (s Server) PostAuthSendVerifyCode(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+	var request spec.SendVerifyCodeRequest
+	if err := json.NewDecoder(r.Body).Decode(&request); err != nil {
+		response.JSON(w, http.StatusInternalServerError, spec.ErrorResponse{
+			ErrorCode: spec.ErrorResponseErrorCodeINTERNALSERVERERROR,
+			Message:   err.Error(),
+		})
+		return
+	}
+
+	if err := s.authUseCase.SendVerifyCode(ctx, request); err != nil {
+		if strings.EqualFold(err.Error(), domain.VerifyCodeExpiredErr.Error()) || strings.EqualFold(err.Error(), domain.VerifyCodeNotMatchErr.Error()) {
+			response.JSON(w, http.StatusBadRequest, spec.ErrorResponse{
+				ErrorCode: spec.ErrorResponseErrorCodeBADREQUEST,
+				Message:   err.Error(),
+			})
+			return
+		}
+		response.JSON(w, http.StatusInternalServerError, spec.ErrorResponse{
+			ErrorCode: spec.ErrorResponseErrorCodeINTERNALSERVERERROR,
+			Message:   err.Error(),
+		})
+		return
+	}
+}
+
 func (s Server) PostAuthSignIn(w http.ResponseWriter, r *http.Request) {
 	var request spec.SignInRequest
 	ctx := r.Context()
