# internal/server/gateway/gateway.go
@@ -9,21 +9,43 @@ import (
 	"yukiko-shop/pkg/response"
 )
 
+func (s Server) PostAuthSendVerifyCode(w http.ResponseWriter, r *http.Request) {
+	var request spec.SendVerifyCodeRequest
+	if err := json.NewDecoder(r.Body).Decode(&request); err != nil {
+		response.JSON(w, http.StatusInternalServerError, spec.ErrorResponse{
+			ErrorCode: spec.ErrorResponseErrorCodeINTERNALSERVERERROR,
+			Message:   err.Error(),
+		})
+		return
+	}
+
+	res, err := httpRequest.Post(fmt.Sprintf("http://%s/auth/sendVerifyCode", s.cfg.AuthServiceHost), request)
+	if err != nil {
+		response.JSON(w, http.StatusInternalServerError, spec.ErrorResponse{
+			ErrorCode: spec.ErrorResponseErrorCodeINTERNALSERVERERROR,
+			Message:   err.Error(),
+		})
+		return
+	}
+
+	response.Reply(w, res.Code, []byte(*res.Body))
+}
+
 func (s Server) PostAuthSignUp(w http.ResponseWriter, r *http.Request) {
 	var request spec.SignUpRequest
 	if err := json.NewDecoder(r.Body).Decode(&request); err != nil {
 		response.JSON(w, http.StatusInternalServerError, spec.ErrorResponse{
 			ErrorCode: spec.ErrorResponseErrorCodeINTERNALSERVERERROR,
-			Message: err.Error(),
+			Message:   err.Error(),
 		})
 		return
 	}
 
-	res, err := httpRequest.Post(fmt.Sprintf("http://%s/auth/signUp", s.cfg.AuthServiceHost,), request)
+	res, err := httpRequest.Post(fmt.Sprintf("http://%s/auth/signUp", s.cfg.AuthServiceHost), request)
 	if err != nil {
 		response.JSON(w, http.StatusInternalServerError, spec.ErrorResponse{
 			ErrorCode: spec.ErrorResponseErrorCodeINTERNALSERVERERROR,
-			Message: err.Error(),
+			Message:   err.Error(),
 		})
 		return
 	}
@@ -36,16 +58,16 @@ func (s Server) PostAuthSignIn(w http.ResponseWriter, r *http.Request) {
 	if err := json.NewDecoder(r.Body).Decode(&request); err != nil {
 		response.JSON(w, http.StatusInternalServerError, spec.ErrorResponse{
 			ErrorCode: spec.ErrorResponseErrorCodeINTERNALSERVERERROR,
-			Message: err.Error(),
+			Message:   err.Error(),
 		})
 		return
 	}
 
-	res, err := httpRequest.Post(fmt.Sprintf("http://%s/auth/signIn", s.cfg.AuthServiceHost,), request)
+	res, err := httpRequest.Post(fmt.Sprintf("http://%s/auth/signIn", s.cfg.AuthServiceHost), request)
 	if err != nil {
 		response.JSON(w, http.StatusInternalServerError, spec.ErrorResponse{
 			ErrorCode: spec.ErrorResponseErrorCodeINTERNALSERVERERROR,
-			Message: err.Error(),
+			Message:   err.Error(),
 		})
 		return
 	}
